--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,7 +3,7 @@
   "home": {
     "title": "DinoGenics Solo Helper",
     "play1": "Play <a href='https://boardgamegeek.com/boardgame/210296/dinogenics' target='_blank' rel='noopener'><b>DinoGenics</b></a> against a DiNO, the Solo Opponent.",
-    "play2": "DiNO can be used for any 1-4 player game including the DinoGenics base game and Controlled Chaos expansion.",
+    "play2": "DiNO can be used for any 1-4 player-game that includes Controlled Chaos and supports most modules.",
     "feedback": "Discussion and Feedback:"
   },
   "setup": {
@@ -24,6 +24,7 @@
     },
     "modules": {
       "title": "Modules and Expansions",
+      "noControlledChaosWarning": "It is recommended to play DiNO with the Controlled Chaos expansion.",
       "controlled-chaos": "Controlled Chaos Expansion",
       "controlled-chaos-chaos-theory": "Controlled Chaos Expansion: Chaos Theory Module",
       "controlled-chaos-dinosaur-elites": "Controlled Chaos Expansion: Dinosaur Elites Module",
