--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -181,7 +181,18 @@
       "facilities": "Park Facilities are built starting in the bottom middle column.",
       "largeFacilities": "Large Park Facilities (including Aquatic Habitats) are built starting in the lower left column. Large Park Facilities are placed so that only half of the facility takes up a park space.",
       "commercialFacilities": "Commercial Facilities are built in the column to the left of the visitor center and may expand into the right most column by first expanding up.",
-      "largeCommercialFacilities": "Large Commercial Facilities are built in the column above the Visitor Center. Large Park Facilities are placed so that only half of the facility takes up a commercial space."
+      "largeCommercialFacilities": "Large Commercial Facilities are built in the column above the Visitor Center. Large Park Facilities are placed so that only half of the facility takes up a commercial space.",
+      "cards": {
+        "title": "Card Clarifications",
+        "geneGraftingLab": {
+          "title": "Gene Grafting Lab",
+          "description": "DiNO draws 1 additional (e)DNA without spending goats."
+        },
+        "geneticsFacility": {
+          "title": "Genetics Facility",
+          "description": "DiNO is allowed to use his spare stack to complete sets, but prefers to use complete sets and tokens/polymorphic cards first."
+        }
+      }
     },
     "dnaCollection": {
       "title": "DNA Collection",
@@ -222,21 +233,21 @@
       "title": "Breaking News",
       "26": "DiNO takes two scandals.",
       "27": "Specialist that scores the most victory points.", 
-      "29": "Discard 1 DNA card from spare if present.",
+      "29": "Discard 1 DNA card to the Boneyard from spare if present.",
       "30": "DiNO resolves a normal City Center buy action.",
       "33": "DiNO receives VPs for all goats without spending money.",      
       "D1": "DiNO decides not to roll an Upkeep Die.",
       "D3": "DiNO attempts the roll even if it does not have goats.",
       "C01": "Draw the next action card to determine the species.",
-      "C02": "If DiNO has a scandal token and/or a damaged building, he picks this option. Otherwise he takes a scandal and destroys the building with the most end game VPs.",
+      "C02": "If DiNO has a scandal token and/or a damaged facility, or his opponents only have hotels, he discards a Scandal and repairs up to 1 facility. Otherwise he takes a scandal and destroys the building with the most end game VPs.",
       "C03": "DiNO is last in bid order and will always bid actual DiNO value (without paying) and doesn’t take a scandal.",
       "C04": "DiNO draws 2 eDNA-cards.",
-      "C05": "Draw the next action card and count empty spaces starting from the upper left corner depending on which of the six slots is highlighted. That’s where the token is placed.",
+      "C05": "Draw the next action card and count empty spaces starting from the upper left corner depending on the Advanced Selection Number. That’s where the token is placed.",
       "corruptedTRex": {
         "title": "Corrupted T-Rex Variant Clarifications",
         "intro": "If the Corrupted T-Rex news card triggered, DiNO will adjust his actions:",
-        "dnaAction": "DiNO will only use a DNA-acquiring action if he has no complete DNA-set at all (including the mutant card) yet and the action provides a chance to complete a set. For example, if he is missing more than one card, he won’t use the refinement- or boneyard-actions.",
-        "cityCenter": "DiNO will still use the City Center, but only buy from the market in the above-mentioned case.",
+        "dnaAction": "DiNO will only use a DNA-acquiring action if he has no complete DNA-set at all (including the mutant card) and the action provides a chance to complete a set. if he is missing more than one card, he won’t use the refinement- or boneyard-actions.",
+        "market": "DiNO will only buy from the market in the above case.",
         "placeTRex": "If DiNO has to place a corrupted T-Rex, place it in a 1x1 fenced pen if possible."
       }
     },
@@ -244,7 +255,7 @@
       "title": "Manipulation Cards",
       "benefitsPackage": {
         "title": "Benefits Package",
-        "description": "DiNO draws cards from its deck to determine which Specialists are acquired. Stop once it has reached the cost of 3 or no more cards are available."
+        "description": "DiNO draws cards from its deck to determine which Specialists are aquired. Stop once it has reached the cost of 3 or no more cards are available."
       },
       "blackMarket": {
         "title": "Black Market",
@@ -252,7 +263,7 @@
       },
       "controlTheNewsCycle": {
         "title": "Control the News Cycle",
-        "description": "DiNO takes the Breaking news-cards and randomly redistributes them. DiNO receives 3 victory points."
+        "description": "DiNO takes the Breaking news-cards and randomly redistributes them face down. DiNO receives 3 victory points."
       },
       "dnaSplice": {
         "title": "DNA Splice",
@@ -292,7 +303,7 @@
       },
       "shareholderMeeting": {
         "title": "Shareholder Meeting",
-        "description": "DiNO scores a maximum of 5 victory points for his current money. DiNO builds two basic Hotels if he has less than 3. Otherwise DiNO draws a DNA and eDNA card."
+        "description": "DiNO scores a maximum of 5 victory points for his current money. DiNO builds two Basic Hotels if he has less than 3. Otherwise DiNO draws a DNA and eDNA card."
       },
       "strongArmTheMarket": {
         "title": "Strong Arm the Market",
@@ -414,7 +425,7 @@
     "farm": {
       "title": "The Farm",
       "ruleSummary": "If no/not enough goats for this season and next.",
-      "locationUse": "DiNO uses the farm if it has zero goats or it lacks enough goats to feed its built carnivores, and any carnivore in the right most preferred DNA stack, for the next 2 feeding phases."
+      "locationUse": "DiNO uses the farm if it has zero goats or lacks enough goats to feed its built carnivores, and any carnivore in the right most prefered DNA stack, for the next 2 feeding phases."
     },
     "ferry": {
       "title": "The Ferry",
@@ -430,7 +441,7 @@
       "title": "Outsource",
       "ruleSummary": "Use any other action space.",
       "useOtherLocation": "DiNO carries out the action of this location without placing another worker:",
-      "actions": "DiNO is not limited to taking actions occupied existing workers and prefers the board space even if he has built a Private Airport."
+      "actions": "DiNO is not limited to taking actions with occupied existing workers and prefers the board space even if he has built a Private Airport."
     },
     "city-center": {
       "title": "The City Center",
@@ -439,7 +450,7 @@
       "receiveFences": "DiNO receives three new fences to its reserve and may replace damaged habitats.",
       "facilityBuildRepair": "DiNO repairs one facility or - if no facility is damaged - builds a new facility based on the following criteria:",
       "facilityBuildRepairBiodome": "If DiNO has a preferred set of Pterodactyl DNA and a Biodome is available, DiNO builds the Biodome.",
-      "facilityBuildRepairHotel": "DiNO builds a Basic hotel if he has less than two hotels.",
+      "facilityBuildRepairHotel": "DiNO builds a Basic Hotel if he has less than two Basic Hotels.",
       "facilityBuildRepairOtherwise": "Otherwise, DiNO chooses a new facility:",
       "buyMarket": "If DiNO can buy a DNA card from the market that matches one of its incomplete preferred species sets, DiNO buys it without paying. If there are several options, the rightmost card is preferred. Otherwise DiNO sells a DNA card, if the Spare Stack has at least two cards. In this case DiNO sells the card from the bottom of this stack and receives the sale price. If none applies, the Market is not used.",
       "determineFacility": "Determine Facility",
@@ -453,7 +464,7 @@
       "locationUseDNASet": "DiNO has at least one complete preferred DNA set – Polymorphic DNA cards and/or Refined DNA Tokens are considered.",
       "locationUseMutant": "DiNO has not created a mutant yet and it has at least 2 DNA or eDNA cards that are not part of a complete preferred set.",
       "enoughFences": "In either case, DiNO must also have enough fences to create a suitable habitat, and in the case of a carnivore, must have enough goats to feed it for the current season.",
-      "creatingDinosaur": "When creating a preferred dinosaur, empty a stack to the DNA discard pile and any remaining DNA is placed into the Spare pile. Choose right to left if there are multiple options. When creating a mutant, discard the Mutant reference card and 2 DNA cards. Prioritize DNA taken from the spare stack, then incomplete preferred stacks in order of preference left to right.",
+      "creatingDinosaur": "When creating a preferred dinosaur, empty a stack to the DNA discard pile and any remaining DNA is placed into the Spare pile. Choose right to left if there are multiple options. When creating a mutant, discard the Mutant reference card and 2 DNA cards. Prioritize DNA taken from the spare stack, then incomplete preferred stacks in order of preference left to right. DiNO will only create additional Mutants if gained from from a Bonus Card Benefit or from event/manipulation cards.",
       "createHabitat": "Create a suitable habitat for the new dinosaur using the minimal number of fences required. Dinosaurs of the same species as existing dinosaurs (or Ankylosaurus) must be consolidated into a larger pen. An empty Bio dome is only used if a dinosaur with the Flight Trait was created or if DiNO is unable to create a viable habitat with fences.",
       "moveStacks": "Finally, move all preferred stacks to the right to fill the empty space and refresh the empty stack space on the left with cards from the spare pile."
     },
@@ -488,7 +499,7 @@
       "locationUse": "Only used if DiNO has less than two complete DNA sets.",
       "noResources": "DiNO spends no resources and keeps all drawn cards.",
       "cardAssignment": "Assign cards to preferred matching DNA sets or place them on the bottom of the Spare Stack.",
-      "newStack": "If there are less than 4 stacks next to the Spare Stack, create a new stack on the rightmost empty space."
+      "newStack": "Refresh preferred stacks if empty."
     }
   },
   "ruleChange": {
