--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -68,9 +68,11 @@
     "outOfLocations": "Out of further locations, go back.",
     "back": "Back"
   },
-  "lackOfBuildingSpace": {
-    "info": "<i>Lack of Building Space</i>: In case there is no further room for the new facility, DiNO gains instead:",
+  "determineBonusCardBenefit": {
     "determineBonus": "Determine Bonus"
+  },
+  "lackOfBuildingSpace": {
+    "info": "<i>Lack of Building Space</i>: In case there is no further room for the new facility, DiNO gains instead:"    
   },
   "locationRulesCollapse": {
     "showRules": "Show Rules",
@@ -493,11 +495,20 @@
     "intelligen-designs-hq": {
       "title": "IntelliGen Designs HQ",
       "ruleSummary": "Open Ocean Roll or hire specialist, Large Facility.",
-      "openOceanRoll": "Resolve an <b>Open Ocean Roll</b> (1a) for DiNO",
-      "hireSpecialist": "DiNO hires <b>Specialist {number}a</b> from the Underground Job Network without spending a manipulation card or money (if available).",
-      "buildAquaticHabitat": "DiNO builds an <b>Aquatic Habitat</b> if he has none, fewer empty ones than complete sets of aquatic dinosaur DNA, or if he just gained a Plesiosaurus from an Open Ocean roll.",
-      "buildLargeFacility": "Otherwise <b>Large Facility {number}b</b> is added to DiNO’s park.",
-      "determineAction": "Determine Action"
+      "action1": {
+        "aquaticHabitat": "Determine if DiNO has a complete set of eDNA for a size-2 aquatic species without an empty aquatic habitat. If so, DiNO immediately builds an aquatic habitat.",
+        "otherwise": "Otherwise:",
+        "determineAction": "Determine Action",
+        "openOceanRoll": "Resolve an <b>Open Ocean Roll</b> (1a) for DiNO",
+        "hireSpecialist": "DiNO hires <b>Specialist {number}a</b> from the Underground Job Network without spending a manipulation card or money.",
+        "specialistNotAvailable": "If no specialist is available at the given position DiNO gains:",
+        "gainBonus": "Gain bonus:"
+      },
+      "action2": {
+        "addLargeFacility": "DiNO adds a large facility to it's park:",
+        "selectFacility": "Large Facility {number}b",
+        "facilityHint": "DiNO should only build Aquatic Habitats if he has none, fewer empty ones than complete DNA sets, or if he just gained a Plesiosaurus from an Open Ocean roll."
+      }
     },
     "site-common": {
       "locationUse": "Only used if DiNO has less than two complete DNA sets.",
