no change of difficulty on end of game screen

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -92,6 +92,7 @@
   },
   "endOfGame": {
     "title": "End of Game",
+    "difficultyLevel": "Difficulty Level:",
     "resources": {
       "title": "Remaining Resources",
       "credits": "Credits",
