link to general rules modal

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -252,7 +252,7 @@
       "33": "DiNO receives VPs for all goats without spending money.",      
       "D1": "DiNO decides not to roll an Upkeep Die.",
       "D3": "DiNO attempts the roll even if it does not have goats.",
-      "C01": "Use <i>Species Selection</i> from the General Rules overview.",
+      "C01": "Use <i>Species Selection</i> from the <a data-bs-toggle='modal' href='#generalRulesModal'>General Rules</a> overview.",
       "C02": "If DiNO has a scandal token and/or a damaged facility, or his opponents only have hotels, he discards a Scandal and repairs up to 1 facility. Otherwise he takes a scandal and destroys the building with the most end game VPs.",
       "C03": "DiNO is last in bid order and will always bid actual DiNO value (without paying) and doesn’t take a scandal.",
       "C04": "DiNO draws 2 eDNA-cards.",
@@ -325,7 +325,7 @@
       },
       "unleashContagion": {
         "title": "Unleash Contagion",
-        "description": "Use the <i>Species Selection</i> in the General Rules overview to get a hint for an affected dinosaur. If possible, get hints until a dinosaur is selected who doesn’t have a reputation value of one of DiNO’s dinosaurs. Otherwise the first mentioned determines the value."
+        "description": "Use the <i>Species Selection</i> in the <a data-bs-toggle='modal' href='#generalRulesModal'>General Rules</a> overview to get a hint for an affected dinosaur. If possible, get hints until a dinosaur is selected who doesn’t have a reputation value of one of DiNO’s dinosaurs. Otherwise the first mentioned determines the value."
       },
       "whistleBlower": {
         "title": "Whistle Blower",
