display number of visitors in open season

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -49,8 +49,8 @@
       "newItems": "New Player Order",
       "newItemsSelect": "Please determine the new player order."
     },
-    "assignVisitors": "Assign visitors based on player order.",
-    "assignBonusVisitors": "Assign bonus visitors.",
+    "assignVisitors": "Assign visitors:",
+    "assignVisitorCount": "{visitorCount} visitors + up to {bonusVisitorTakeCount} of {bonusVisitorCount} bonus visitors",
     "receiveIncome": "Each player receives 1 credit for each visitor in their park.",
     "breakingNews": "Resolve the next Breaking News card, and draw a new upcoming one.",
     "drawFacilityTiles": "Draw one random tile to each of the 2nd/3rd/4th facility stacks in the City Center.",
