rename new arrivals expansion

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -28,7 +28,7 @@
       "controlled-chaos": "Controlled Chaos Expansion",
       "controlled-chaos-chaos-theory": "Controlled Chaos Expansion: Chaos Theory Module",
       "controlled-chaos-dinosaur-elites": "Controlled Chaos Expansion: Dinosaur Elites Module",
-      "new-arrivals-mini-expansion": "New Arrivals Mini Expansion",
+      "new-arrivals": "New Arrivals",
       "dino-advanced": "DiNO Advanced Mode"
     }
   },
